# r8169-ethercat-opt

./: .gitignore  README.md
af_xdp_ethercat/: .gitignore  Makefile  README.md  af_xdp_test.c  xdp_ethercat.bpf.c
r8169_8168h_only/: Makefile  README.md  r8169.h  r8169_main.c  r8169_phy_config.c
r8169_8168h_only/experiments/ethercat_trim_20260206/: changes_from_current_main.patch
r8169_8168h_only/experiments/ethercat_trim_20260206/r8169_8168h_only/: Makefile  r8169.h  r8169_main.c
r8169_custom/: Makefile  r8169_main.c
r8169_ethercat_opt/: Makefile  r8169_main.c
r8169_irq_optimized/: Makefile  r8169_main.c
r8169_latest/: Makefile  README.md  r8169_main.c
r8169_optimized/: Makefile  r8169_main.c
r8169_rx_only_poll/: Makefile  r8169_main.c
r8169_tx_hardirq/: Makefile  README.md  r8169_main.c
r8169_tx_off_optimized/: Makefile  r8169_main.c
r8169_uio/: CMakeLists.txt  README.md
r8169_uio/include/: r8169_uio.h
r8169_uio/scripts/: bind_uio.sh
r8169_uio/src/: r8169_uio.c
r8169_uio/test/: ethercat_test.c
r8169_xdp/: Makefile  r8169_main.c
r8169_zerocopy/: Makefile  r8169_main.c
r8169_zerocopy_v2/: Makefile  r8169_main.c
